content-based recommendation

--- a/recommendation evaluation.ipynb
+++ b/recommendation evaluation.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "5523b8f5-e6b7-4c17-8f31-74118249bbed",
    "metadata": {},
    "outputs": [],
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "0a88e300-1614-4635-86ef-62e7bf99d0ff",
    "metadata": {},
    "outputs": [],
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "7d34d1d6-b999-4a9a-8f0c-987c007bb827",
    "metadata": {},
    "outputs": [],
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "0d9c29c8-ed6f-4309-900f-cd82638cbaee",
    "metadata": {},
    "outputs": [],
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "id": "394668db-5fc5-4c28-8caa-c3efec9bcafb",
    "metadata": {},
    "outputs": [],
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "id": "7fedc390-dc2f-47d0-b331-c6a6b979ec74",
    "metadata": {},
    "outputs": [
@@ -138,13 +138,13 @@
        "0"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(list(set(test_df['userId'].unique())-set(train_df['userId'])))"
+    "len(list(set(test_df['userId'].unique())-set(train_df['userId'].unique())))"
    ]
   },
   {
